TODO追加機能、削除機能、ステータス変更ブルダウン追加

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,16 @@
   width: 500px;
 }
 
+input {
+  margin: 20px 0 0 20px;
+}
+
 button {
   cursor: pointer;
+}
+
+h2 {
+  text-align: center;
 }
 
 .input-area {
@@ -12,13 +20,8 @@ button {
   height: 100px;
 }
 
-.incomplete-area {
+.todo-area {
   background-color: lightgreen;
-  min-height: 200px;
-}
-
-.complete-area {
-  background-color: lightyellow;
   min-height: 200px;
 }
 
